# practice-ecog-finger-control

./: EEGNet.ipynb  data.dvc  eegnet_best_weights.pth  pyproject.toml
notebooks/: data_smit2.ipynb  jj_play.ipynb
src/: main.py
